@@ -399,10 +399,6 @@ help plot
 @noindent
 will display the help text for the @code{plot} function.
 
-Octave sends output that is too long to fit on one screen through a
-pager like @code{less} or @code{more}.  Type a @key{RET} to advance one
-line, a @key{SPC} to advance one page, and @key{q} to quit the pager.
-
 The part of Octave's help facility that allows you to read the complete
 text of the printed manual from within Octave normally uses a separate
 program called Info.  When you invoke Info you will be put into a menu
